# DaoCloud-docs

./: .dockerignore  .gitignore  .gitlab-ci.yml  1.txt  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_zh.md  SECURITY.md  amamba.html  api.html  baize.html  blog.html  crowdin.yml  e -i HEAD~2  ghippo.html  index.html  insight.html  kairship.html  kpanda.html  makefile  mcamel.html  mkdocs-en.yml  mkdocs-insiders.yml  mkdocs.yml  mspider.html  pyproject.toml  requirements.txt  sitemap.xml  skoala.html  style.md  style_zh.md  video.html
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  labeler.yml
accounts/: fiona.yaml  frankyu.yaml  golfenguo.yaml  lychee.yaml  robychen.yaml  tanbowen.yaml  viz.yaml  xiaowen.yaml  yankay.yaml
amamba/: components-grafana-dashboard.html  customize-develop.html  customize-step.html  offline-upgrade.html  pluggable-components.html
blogs/: 0429-ai-survey.html  0606-k8s-birth.html  20240619-nvidiaai.html  220708-mspider.html  220808-kairship.html  220925-amamba.html  221008-dce-bg.html  221018-resource.html  221026-kpanda.html  221116-kcsp.html  221209-k8s-1.26.html  230110-res-usage.html  230201-forecast.html  230201-peter.html  230214-daocloud_k8s.html  230214-open-projects.html  230301-kwok.html  230315-install-on-linux.html  230315-install-on-macos.html  230317-edge-app-wp.html  230405-step-by-step-dce5.html  230411-spiderpool.html  230412-k8s-1.27.html  230417-cncf-platform-wp.html  230418-karmada-failover.html  230427-victoriametrics.html  230428-pod-startup.html  230508-cilium.html  230509-k8s-install.html  230515-chaos-mesh.html  230518-seccom.html  230601-api-server-tracing.html  230605-fedstate.html  230609-istio118.html  230612-ray.html  230615-ray.html  230808-k8sgpt.html  230815-k8s1.28.html  230824-tools.html  230911-kubecon-contributor.html  (+21 more)
community/: cloudtty.html  clusterpedia.html  dtx.html  egress-gw.html  fast.html  fedstate.html  ferry.html  hami.html  hwameistor.html  index.html  kasmcloud.html  kdoctor.html  klts.html  kube-node-tuning.html  kubean.html  kwok.html  merbridge.html  miragedebug.html  mirror.html  piraeus.html  spiderpool.html
config/: message-endpoints.yaml  security.yaml  site.yaml  system.yaml
dce/: bphome.html  faq.html  features.html  index.html  kcsp.html  license0.html  roadmap.html  scenario.html  support.html  terms.html
docs/: .pages.yaml  .pages.yml  README.md  README_zh.md  domain_management_update.md  egress-rules.md  github_gitlab_token.md  github_gitlab_token_guide.md  index.md  index_2.md  index_en.md  versioned_conf.py
download/: index.html
includes/: glossary.md
install/: air-tag-download.html  evolve.html  faq.html  import.html  index.html  install-tools.html  release-notes.html  uninstall.html  upgrade.html
k8s/: deployment.yaml
kairship/: cluster.html  workspace.html
middleware/: compatibility.html  index.html  permission.html
native/: commerce.html  open.html
overrides/: main.html
resources/: internal-helm-repo-sample.yaml
scripts/: README.md  alert_webhook.py  build_versioned_docs.sh  check_links.py  cleanup_environment.sh  config.py.sample  dce_models.json  docker_tagging.sh  generate_nav.py  generate_pdf.md  generate_pdf_zh.md  install.sh  installer_readiness_check_fix.sh  lsync.sh  md2doc-v2.py  md_image_analyzer.py  merge_nav.py  merged_nav.py  pipeline_creation_handler.py  pr-report.py  refresh_cdn_cache.py  release.sh  remove_navbar.py  remove_pdf_password.py  report_monthly.py  run_netlify.sh  (+4 more)
(+7546 files in other folders)
