[project]
name = "daocloud-docs"
version = "0.2.0"
description = "DaoCloud Product Documents Repo."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jieba>=0.42.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "pymdown-extensions>=10.14",
    "pyyaml>=6.0.2",
]

[dependency-groups]
pdf = [
    "docxcompose>=1.4.0",
    "livereload>=2.7.0",
    "mkdocs-extra-sass-plugin>=0.1.0",
    "mkdocs-with-pdf>=0.9.3",
    "pandoc>=2.4",
    "python-docx>=1.1.2",
]
upload = [
    "requests>=2.32.0",
    "ufile>=3.2.9",
]
translate = [
    "googletrans==3.1.0a0",
]
report = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "requests>=2.32.0",
]
image = [
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "ufile>=3.2.9",
]
link-check = [
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "tabulate>=0.9.0",
]
pdf-tools = [
    "pypdf2>=3.0.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
